adjusted hover effects for about page fixed bug where some links weren't showing on mobile

--- a/src/components/about_page/about.scss
+++ b/src/components/about_page/about.scss
@@ -28,13 +28,18 @@ sans-serif;
             display: inline-block;
             margin: 0 3%;
 
-            .icon :hover {
-                fill: #ffa500;
+            &:hover {
+                border-bottom: 4px solid #ffa500;
             }
-
-            // &:nth-child(4){
-            //     margin-bottom: 20px;
-            // }
         }
     }
 }
+
+@media screen and (min-width: 400px){
+    .team-card {
+        &:nth-child(4){
+            margin-bottom: 50px;
+        }
+    }
+}
+
